--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>se.diversify.multivaders</groupId>
     <artifactId>multivaders</artifactId>
-    <packaging>jar</packaging>
+    <packaging>war</packaging>
     <version>1.0.0-SNAPSHOT</version>
 
     <name>Multivaders</name>
