--- a/pom.xml
+++ b/pom.xml
@@ -8,5 +8,14 @@
     <artifactId>multivaders</artifactId>
     <version>1.0</version>
 
-    
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.9</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
+
+
 </project>
