--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,11 @@
             <artifactId>logback-classic</artifactId>
             <version>1.0.10</version>
         </dependency>
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>2.1</version>
+        </dependency>
 
 
     </dependencies>
